--- a/TcHmiProject1/Server/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/TcHmiProject1/Server/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -917,8 +917,8 @@
     "DISCOVERY": 2,
     "ENABLE_SERVER_UPDATE": true,
     "ENDPOINTS": [
-        "http://127.0.0.1:13001",
-        "http://127.0.0.1:3001"
+        "http://127.0.0.1:13002",
+        "http://127.0.0.1:3002"
     ],
     "ETAGENABLED": true,
     "EXTENSIONS": {
@@ -928,11 +928,6 @@
             "PATH": "TcHmiAds\\",
             "PROCESSID": -1,
             "REQUIRED": true,
-            "STARTUPTYPE": 1
-        },
-        "Beckhoff.TwinCAT.HMI.Server.Engineering": {
-            "ENABLED": false,
-            "NAME": "",
             "STARTUPTYPE": 1
         },
         "TcHmiLua": {
@@ -978,7 +973,7 @@
     ],
     "FLOODPROTECTION": 500,
     "FLOODPROTECTION_LOG_INTERVAL": "PT1M",
-    "GLOBALHTTPHEADERS": "{LASTMODIFIED}\nStrict-Transport-Security: max-age=31536000; includeSubDomains\nX-Content-Type-Options: nosniff",
+    "GLOBALHTTPHEADERS": "{LASTMODIFIED}\r\nStrict-Transport-Security: max-age=31536000; includeSubDomains\r\nX-Content-Type-Options: nosniff",
     "GZIPENABLED": true,
     "GZIPMINSIZE": 800,
     "HTTP_FLOODPROTECTION": 100,
