--- a/TcHmiProject1/Properties/tchmipublish.config.json
+++ b/TcHmiProject1/Properties/tchmipublish.config.json
@@ -23,7 +23,7 @@
       }
     ],
     "isNew": false,
-    "profileName": "EL",
+    "profileName": "testt",
     "publishMode": "TcHmi",
     "targetDirectory": "",
     "server": "",
@@ -41,18 +41,18 @@
     "encryptedPassword": "",
     "encryptedTcHmiServerPassword": "X+ho8ShOqMdlltEenQI6cA==",
     "tcHmiServerHost": "localhost",
-    "tcHmiServerPort": "1020",
+    "tcHmiServerPort": "1010",
     "uploadTimeout": "60",
     "connectionTimeout": "5",
     "requestTimeout": "60",
     "extensionStartupTimeout": "120",
     "clientCertificateCN": "",
-    "tcHmiUseTLS": true,
+    "tcHmiUseTLS": false,
     "useClientCertificate": false,
     "launchBrowserAfterPublish": true,
     "createVirtualDirectoriesOnTargetSystem": false,
     "tcHmiServerUserName": "__SystemAdministrator",
-    "tcHmiDestinationUrl": "https://localhost:1020/",
+    "tcHmiDestinationUrl": "http://localhost:1010/",
     "publishConfiguration": "remote",
     "tcHmiSavePassword": false,
     "tcHmiIgnoreCertificateErrors": true
