--- a/TcHmiProject1/Server/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/TcHmiProject1/Server/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -1582,7 +1582,7 @@
             "USEMAPPING": true
         },
         "ADS.Config": {
-            "ACCESS": 0,
+            "ACCESS": 3,
             "DOMAIN": "ADS",
             "DYNAMIC": false,
             "HIDDEN": true,
@@ -1592,7 +1592,7 @@
             "USEMAPPING": true
         },
         "ADS.Diagnostics": {
-            "ACCESS": 1,
+            "ACCESS": 3,
             "DOMAIN": "ADS",
             "DYNAMIC": false,
             "HIDDEN": true,
@@ -2302,7 +2302,7 @@
             "USEMAPPING": true
         },
         "Diagnostics": {
-            "ACCESS": 1,
+            "ACCESS": 3,
             "DOMAIN": "TcHmiSrv",
             "DYNAMIC": false,
             "HIDDEN": true,
@@ -4060,7 +4060,7 @@
             "USEMAPPING": true
         },
         "TcHmiLua.Config": {
-            "ACCESS": 0,
+            "ACCESS": 3,
             "DOMAIN": "TcHmiLua",
             "DYNAMIC": false,
             "HIDDEN": true,
@@ -4100,7 +4100,7 @@
             "USEMAPPING": true
         },
         "TcHmiSqliteLogger.Config": {
-            "ACCESS": 0,
+            "ACCESS": 3,
             "DOMAIN": "TcHmiSqliteLogger",
             "DYNAMIC": false,
             "HIDDEN": true,
@@ -4110,7 +4110,7 @@
             "USEMAPPING": true
         },
         "TcHmiSqliteLogger.Diagnostics": {
-            "ACCESS": 1,
+            "ACCESS": 3,
             "DOMAIN": "TcHmiSqliteLogger",
             "DYNAMIC": false,
             "HIDDEN": true,
@@ -4265,7 +4265,7 @@
             "USEMAPPING": true
         },
         "TcHmiSrv.Config": {
-            "ACCESS": 0,
+            "ACCESS": 3,
             "DOMAIN": "TcHmiSrv",
             "DYNAMIC": false,
             "HIDDEN": true,
@@ -4334,7 +4334,7 @@
             "USEMAPPING": true
         },
         "TcHmiUserManagement.Config": {
-            "ACCESS": 0,
+            "ACCESS": 3,
             "DOMAIN": "TcHmiUserManagement",
             "DYNAMIC": false,
             "HIDDEN": true,
@@ -4590,20 +4590,13 @@
     "UPLOADTIMEOUT": "PT20S",
     "USEINT64STRING": false,
     "USERGROUPS": {
-        "Admin": {
+        "Administrator": {
             "ENABLED": true,
             "FILEACCESS": 3,
             "FILES": {},
-            "SYMBOLACCESS": 0,
+            "SYMBOLACCESS": 3,
             "SYMBOLS": {
-                "AddOrChangeUser": 0,
-                "ChangeUserSettings": 0,
-                "RemoveUser": 0,
-                "TcHmiUserManagement.AddUser": 0,
-                "TcHmiUserManagement.DisableUser": 0,
-                "TcHmiUserManagement.EnableUser": 0,
-                "TcHmiUserManagement.RemoveUser": 0,
-                "TcHmiUserManagement.RenameUser": 0
+                "GetCurrentUser": 3
             }
         },
         "Engineer": {
@@ -4614,6 +4607,7 @@
             "SYMBOLS": {
                 "AddOrChangeUser": 0,
                 "ChangeUserSettings": 0,
+                "GetCurrentUser": 3,
                 "RemoveUser": 0,
                 "TcHmiUserManagement.AddUser": 0,
                 "TcHmiUserManagement.DisableUser": 0,
@@ -4630,6 +4624,7 @@
             "SYMBOLS": {
                 "AddOrChangeUser": 0,
                 "ChangeUserSettings": 0,
+                "GetCurrentUser": 3,
                 "RemoveUser": 0,
                 "TcHmiUserManagement.AddUser": 0,
                 "TcHmiUserManagement.DisableUser": 0,
