--- a/TcHmiProject1/Properties/tchmiconfig.json
+++ b/TcHmiProject1/Properties/tchmiconfig.json
@@ -75,19 +75,17 @@
       "name": "Contents/CSS_JAVA/Enable buttons.js",
       "description": "",
       "type": "JavaScript"
-    },
-    {
-      "name": "Contents/CSS_JAVA/delay.js",
-      "description": "",
-      "type": "JavaScript"
     }
   ],
   "userControls": [
     {
-      "url": "Contents/UserControl/Acknowledge.usercontrol"
+      "url": "Contents/UserControl/led.usercontrol"
     },
     {
-      "url": "Contents/UserControl/YesNo.usercontrol"
+      "url": "Contents/UserControl/PopUp/Acknowledge.usercontrol"
+    },
+    {
+      "url": "Contents/UserControl/PopUp/YesNo.usercontrol"
     }
   ],
   "content": [
@@ -225,6 +223,20 @@
       "preloadBindings": false
     },
     {
+      "url": "Contents/popup/popup2_ChangeSettings.content",
+      "preload": false,
+      "keepAlive": false,
+      "loadSync": false,
+      "preloadBindings": false
+    },
+    {
+      "url": "Contents/popup/popup1_RejectedPart.content",
+      "preload": false,
+      "keepAlive": false,
+      "loadSync": false,
+      "preloadBindings": false
+    },
+    {
       "url": "Contents/Settings/3_SettingsStation3.content",
       "preload": false,
       "keepAlive": false,
@@ -246,14 +258,7 @@
       "preloadBindings": false
     },
     {
-      "url": "Contents/popup/popup2.content",
-      "preload": false,
-      "keepAlive": false,
-      "loadSync": false,
-      "preloadBindings": false
-    },
-    {
-      "url": "Contents/popup/popup1_RejectedPart.content",
+      "url": "Contents/Settings/4_Timers.content",
       "preload": false,
       "keepAlive": false,
       "loadSync": false,
@@ -339,7 +344,7 @@
         "persist": false,
         "readonly": false
       },
-      "ClosePopUp": {
+      "OpenPopUp": {
         "value": false,
         "type": "tchmi:general#/definitions/BOOL",
         "persist": false,
